; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_filter/converter/extr_format.c_Fl64toU8.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_filter/converter/extr_format.c_Fl64toU8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* (i32*, %struct.TYPE_4__*)* @Fl64toU8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @Fl64toU8(i32* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca double*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca float, align 4
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to double*
  store double* %12, double** %5, align 8
  %13 = load double*, double** %5, align 8
  %14 = bitcast double* %13 to i32*
  store i32* %14, i32** %6, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = sdiv i32 %17, 8
  %19 = sext i32 %18 to i64
  store i64 %19, i64* %7, align 8
  br label %20

20:                                               ; preds = %49, %2
  %21 = load i64, i64* %7, align 8
  %22 = add i64 %21, -1
  store i64 %22, i64* %7, align 8
  %23 = icmp ne i64 %21, 0
  br i1 %23, label %24, label %50

24:                                               ; preds = %20
  %25 = load double*, double** %5, align 8
  %26 = getelementptr inbounds double, double* %25, i32 1
  store double* %26, double** %5, align 8
  %27 = load double, double* %25, align 8
  %28 = fmul double %27, 1.280000e+02
  %29 = fptrunc double %28 to float
  store float %29, float* %8, align 4
  %30 = load float, float* %8, align 4
  %31 = fcmp oge float %30, 1.270000e+02
  br i1 %31, label %32, label %35

32:                                               ; preds = %24
  %33 = load i32*, i32** %6, align 8
  %34 = getelementptr inbounds i32, i32* %33, i32 1
  store i32* %34, i32** %6, align 8
  store i32 255, i32* %33, align 4
  br label %49

35:                                               ; preds = %24
  %36 = load float, float* %8, align 4
  %37 = fcmp ole float %36, -1.280000e+02
  br i1 %37, label %38, label %41

38:                                               ; preds = %35
  %39 = load i32*, i32** %6, align 8
  %40 = getelementptr inbounds i32, i32* %39, i32 1
  store i32* %40, i32** %6, align 8
  store i32 0, i32* %39, align 4
  br label %48

41:                                               ; preds = %35
  %42 = load float, float* %8, align 4
  %43 = call i64 @lround(float %42)
  %44 = add nsw i64 %43, 128
  %45 = trunc i64 %44 to i32
  %46 = load i32*, i32** %6, align 8
  %47 = getelementptr inbounds i32, i32* %46, i32 1
  store i32* %47, i32** %6, align 8
  store i32 %45, i32* %46, align 4
  br label %48

48:                                               ; preds = %41, %38
  br label %49

49:                                               ; preds = %48, %32
  br label %20

50:                                               ; preds = %20
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = sdiv i32 %53, 8
  store i32 %54, i32* %52, align 8
  %55 = load i32*, i32** %3, align 8
  %56 = call i32 @VLC_UNUSED(i32* %55)
  %57 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  ret %struct.TYPE_4__* %57
}

declare dso_local i64 @lround(float) #1

declare dso_local i32 @VLC_UNUSED(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
